# ros2_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/action/: ArithmeticChecker.action  ArithmeticChecker.idl
install/msg_srv_action_interface_example/share/msg_srv_action_interface_example/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  msg_srv_action_interface_exampleConfig-version.cmake  (+4 more)
install/my_first_ros_rclcpp_pkg/lib/my_first_ros_rclcpp_pkg/: helloworld_publisher  helloworld_subscriber
install/my_first_ros_rclcpp_pkg/share/my_first_ros_rclcpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
log/: latest_build
src/action_tutorials_cpp/: package.xml
src/action_tutorials_cpp/src/: fibonacci_action_server.cpp
src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
src/learning_tf2_cpp/: package.xml
src/learning_tf2_cpp/src/: static_turtle_tf2_broadcaster.cpp
src/log/: latest_build
src/msg_srv_action_interface_example/: CMakeLists.txt  package.xml
src/msg_srv_action_interface_example/msg/: ArithmeticArgument.msg
src/msg_srv_action_interface_example/srv/: ArithmeticOperator.srv
src/my_first_ros_rclcpp_pkg/: CMakeLists.txt
src/my_first_ros_rclcpp_pkg/install/: local_setup.sh  setup.sh
src/my_first_ros_rclcpp_pkg/log/: latest_build
src/my_first_ros_rclcpp_pkg/src/: helloworld_publisher.cpp  helloworld_subscriber.cpp
src/my_first_ros_rclpy_pkg/: package.xml  setup.py
src/my_first_ros_rclpy_pkg/log/: latest_build
src/my_first_ros_rclpy_pkg/my_first_ros_rclpy_pkg/: helloworld_publisher.py  helloworld_subscriber.py
src/realsense_opencv/: package.xml  setup.cfg  setup.py
src/realsense_opencv/realsense_opencv/: realsense_subscriber.py
src/segmentation_realsense_pkg/: package.xml  setup.cfg  setup.py
src/segmentation_realsense_pkg/segmentation_realsense_pkg/: camera_open.py  process_node.py  realsense_subscriber.py
src/testbot_description/: CMakeLists.txt  package.xml
src/testbot_description/urdf/: testbot.urdf
src/topic_service_action_rclcpp_example/: CMakeLists.txt  package.xml
src/topic_service_action_rclcpp_example/include/arithmetic/: argument.hpp  operator.hpp
src/topic_service_action_rclcpp_example/include/calculator/: calculator.hpp
src/topic_service_action_rclcpp_example/include/checker/: checker.hpp
src/topic_service_action_rclcpp_example/launch/: arithmetic.launch.py
src/topic_service_action_rclcpp_example/launch/log/: latest_build
src/topic_service_action_rclcpp_example/log/: latest_build
src/topic_service_action_rclcpp_example/param/: arithmetic_config.yaml
src/topic_service_action_rclcpp_example/src/arithmetic/: argument.cpp  operator.cpp
src/topic_service_action_rclcpp_example/src/arithmetic/calculator/: main.cpp
src/topic_service_action_rclcpp_example/src/calculator/: calculator.cpp  main.cpp
src/topic_service_action_rclcpp_example/src/checker/: checker.cpp  main.cpp
(+93 files in other folders)
