<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>segmentation_realsense_pkg</name>
  <version>0.0.0</version>
  <description>UNet using a realsense camera</description>
  <maintainer email="bigyun9375@gmail.com">bigyun</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python-tensorflow-pip</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>realsense_opencv</depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
